--- a/index.html
+++ b/index.html
@@ -2,10 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=0.8">
     <title>Bảng cửu chương</title>
     <link href="style.css" rel="stylesheet">
+    <link href="baseStyle.css" rel="stylesheet">
     <link href="#" rel="icon">
-    <meta name="viewport" content="width=device-width, height=device-height, initial-scale=0.8">
 </head>
 <body>
 <p id="titleArea">Bảng cửu chương</p>
