--- a/index.html
+++ b/index.html
@@ -1,13 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="vi">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bảng cửu chương</title>
 
+    <link href="stylesheet/assetStyle.css" rel="stylesheet">
     <link href="stylesheet/baseStyle.css" rel="stylesheet">
-    <link href="stylesheet/fontStyle.css" rel="stylesheet">
-    <link href="stylesheet/animationStyle.css" rel="stylesheet">
 </head>
 <body>
 <p id="titleArea">Bảng cửu chương</p>
